# embedded-poc-app

./: .gitignore  Makefile  README.md
app/: Makefile  mfrc522.c  mfrc522.h  sensor_demo.c  ssd1306.c  ssd1306.h  ssd1306_font.c
docs/: 04_HARDWARE_WIRING.md  05_RESULTS.md
mcu-renode/: README.md
mcu-renode/firmware/: CMakeLists.txt  blink_button.c
mcu-renode/sim/: pico_blink.resc
scenarios/: sensor_demo_rfid.json
